# rx11

./: Cargo.toml  README.md  build.rs  rustfmt.toml
spec/: dpms.pspec  dri2.pspec  render.pspec  shape.pspec  shm.pspec  x11.pspec  xfixes.pspec  xinput1.pspec  xinput2.pspec  xkb.pspec  xrandr.pspec  xrecord.pspec
src/: lib.rs
src/coding/: mod.rs  shape_proto.rs  x11_proto.rs  xfixes_proto.rs  xinput_proto.rs  xkb_proto.rs  xrandr_proto.rs  xrecord_proto.rs
src/connection/: mod.rs  tcp.rs  unix.rs  x11.rs
src/events/: mod.rs  shape.rs  types.rs  x11.rs  xfixes.rs  xinput.rs  xkb.rs  xrandr.rs
src/net/: errors.rs  event.rs  ext.rs  init.rs  io.rs  mod.rs
src/requests/: access_control.rs  atom.rs  color.rs  colormap.rs  control.rs  cursor.rs  drawable.rs  event.rs  font.rs  gcontext.rs  grab.rs  keysym.rs  misc.rs  mod.rs  pixel.rs  pixmap.rs  pointer.rs  properties.rs  selection.rs  timestamp.rs  visual.rs  window.rs  xge.rs
src/requests/shape/: misc.rs  mod.rs  window.rs
src/requests/x11/: access_control.rs  atom.rs  color.rs  colormap.rs  control.rs  cursor.rs  drawable.rs  event.rs  extensions.rs  font.rs  gcontext.rs  grab.rs  inputs.rs  keysym.rs  mod.rs  pixel.rs  pixmap.rs  pointer.rs  properties.rs  screensaver.rs  selection.rs  timestamp.rs  visual.rs  window.rs
src/requests/xfixes/: barrier.rs  cursor.rs  gcontext.rs  misc.rs  mod.rs  picture.rs  region.rs  selection.rs  window.rs
src/requests/xinput/: barrier.rs  class.rs  device.rs  misc.rs  mod.rs  pointer.rs  property.rs  window.rs
tests/: base.rs  font_list.rs  record.rs
(+29 files in other folders)
