[package]
name = "rx11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
libc = "0.2"
enum_dispatch = "0.3"
protospec = "0.2"
log = "0.4"
derive_builder = "0.10"
dashmap = "5.1"

[dev-dependencies]
env_logger = "0.9"

[build-dependencies]
protospec-build = { version = "0.2", path = "/home/p/git/protospec/protospec-build/" }